MAIN overflow fixed - esercitazione completata

--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,13 @@ header .label-header span {
 
 /* MAIN  */
 main {
+   height: calc(100vh - 50px - 100px);
    margin: 50px 0 100px 0;
    background-color: #000;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
+   overflow: auto;
 }
 
 .user {
